--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         /* background-color: hsl(216, 12%, 8%); */
         background-color: black;
         color: hsla(0, 0%, 100%, 0.837);
-        cursor: pointer;
+
         display: flex;
         gap: 50px;
         font-family: "Overpass", sans-serif;
@@ -47,6 +47,7 @@
       .div {
         background-color: hsl(212, 29%, 13%);
         width: 300px;
+        height: 320px;
         padding: 20px 25px;
         border-radius: 10px;
       }
@@ -64,7 +65,7 @@
         color: white;
       }
       p {
-        font-size: 12px;
+        font-size: 15px;
         letter-spacing: 0.5px;
         line-height: 1.4;
         color: hsl(216, 12%, 54%);
@@ -72,21 +73,25 @@
       }
       .numbers {
         width: 100%;
-        margin-bottom: 25px;
-        margin-top: 10px;
+        margin-bottom: 20px;
+        margin-top: 20px;
       }
       span {
         width: 100%;
         height: 30px;
+        display: inline;
         /* display: flex; */
         font-size: 11px;
         margin-right: 10px;
+        margin-top: 20px;
         padding: 10px 15px;
         border-radius: 50%;
         background-color: hsl(214, 17%, 25%);
+        cursor: pointer;
         transition: all 0.5s;
       }
-      span:hover {
+      span:hover,
+      span:focus {
         background-color: hsl(25, 97%, 53%);
         color: hsl(0, 0%, 100%);
       }
@@ -99,6 +104,7 @@
         color: hsl(0, 0%, 100%);
         border-style: none;
         transition: all 0.5s;
+        margin-top: 10px;
         cursor: pointer;
       }
       button:hover {
